go fix List.of not found -- Arrays.asList